# arkeion

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
.cargo/: config.toml
arkeion-proto/: Cargo.toml
arkeion-proto/src/: lib.rs
benches/: crud.rs  fts_bench.rs  vec_bench.rs  vec_concurrent.rs
docs/: 01-arquitectura.md  02-formato-archivo.md  03-api.md  04-sql.md  05-decisiones.md  06-hitos.md  07-riesgos.md  08-soberania.md  09-m10-compresion.md  10-indices-secundarios.md  11-cliente-servidor.md  12-fts.md  13-vectores.md
docs/sesiones/: 2026-06-09-cli-dogfooding-y-sql.md  2026-06-09-completar-sql.md  2026-06-10-bulk-y-scan-streaming.md  2026-06-10-perf-insert-fase2.md  2026-06-10-resumen.md
examples/: dbsize.rs
scripts/: check.sh
src/: api.rs  branch.rs  catalog.rs  commit.rs  compress.rs  crypto.rs  ecc.rs  error.rs  exec.rs  format.rs  io.rs  ivf.rs  keyenc.rs  lib.rs  pager.rs  pq.rs  record.rs  simd.rs  testutil.rs  tx.rs  vector.rs
src/btree/: mod.rs  node.rs
src/fts/: excerpt.rs  mod.rs  query.rs  tokenizer.rs
src/sql/: ast.rs  datetime.rs  json.rs  lexer.rs  mod.rs  parser.rs
tests/: audit.rs  branching.rs  bulk.rs  compression.rs  concurrent_reads.rs  concurrent_vacuum.rs  crud.rs  dogfood_fixes.rs  ecc.rs  encryption.rs  engine_api.rs  fts.rs  group_commit.rs  hybrid.rs  kv.rs  named_params.rs  options_cache.rs  rel.rs  returning.rs  secondary_indexes.rs  sql.rs  sql_features.rs  sql_recovery.rs  stream.rs  timetravel.rs  vacuum.rs  vectors.rs
tests/sql/: 01_basics.sqltest  02_order_limit.sqltest  03_types_errors.sqltest  04_update_delete.sqltest  05_joins.sqltest  06_aggregates.sqltest  07_transactions.sqltest  08_group_by.sqltest  09_alter_table.sqltest  10_reorder_columns.sqltest  11_scalar_functions.sqltest  12_concat.sqltest  13_cast.sqltest  14_case.sqltest  15_between.sqltest  16_distinct.sqltest  17_group_concat.sqltest  18_datetime.sqltest  19_union.sqltest  20_subqueries.sqltest  21_cte.sqltest  22_views.sqltest  23_foreign_keys.sqltest  24_triggers.sqltest  25_join_pushdown.sqltest  26_drop_rename_column.sqltest  27_intersect_except.sqltest  28_derived_tables.sqltest  29_recursive_cte.sqltest  30_correlated_subqueries.sqltest  31_fk_composite.sqltest  32_statement_triggers.sqltest  33_instead_of_triggers.sqltest  34_scalar_pack.sqltest  35_upsert.sqltest  36_json.sqltest  37_window.sqltest  38_insert_select.sqltest  39_check_unique.sqltest  40_create_table_as.sqltest  (+3 more)
