[package]
name = "arkeion"
version = "0.0.1"
edition = "2024"
rust-version = "1.89"
description = "Motor de base de datos embebido, auditable y versionado — soberano europeo."
homepage = "https://arkeion.tech"
# Licencia: modelo TSAL-1.0 → Apache-2.0 diferido, por confirmar (ver README).
publish = false

# Supply chain mínima y justificada (docs/05-decisiones.md, D8):
#   sha2      — SHA-256 (FIPS 180-4): tags de integridad y hash chain. RustCrypto, Rust puro.
#   getrandom — entropía del SO para file_id y kdf_salt en la creación del archivo.
#   aes-gcm   — AES-256-GCM (FIPS 197 / SP 800-38D): cifrado en reposo por página (M7, D6).
#   zeroize   — borrado seguro de la clave cruda en memoria (M7, D7).
# Nada más: parser, B-tree, encodings, varint y caché van a mano (D8).
[dependencies]
sha2 = "0.10"
getrandom = { version = "0.3", features = ["std"] }
aes-gcm = "0.10"
zeroize = "1"

[dev-dependencies]
tempfile = "3"
