[package]
name = "arkeion"
version = "0.0.1"
edition = "2024"
rust-version = "1.89"
description = "Motor de base de datos embebido, auditable y versionado — soberano europeo."
homepage = "https://arkeion.tech"
license = "MIT OR Apache-2.0"
publish = false

# Supply chain mínima y justificada (docs/05-decisiones.md, D8):
#   sha2      — SHA-256 (FIPS 180-4): tags de integridad y hash chain. RustCrypto, Rust puro.
#   getrandom — entropía del SO para file_id y kdf_salt en la creación del archivo.
#   aes-gcm   — AES-256-GCM (FIPS 197 / SP 800-38D): cifrado en reposo por página (M7, D6).
#   zeroize   — borrado seguro de la clave cruda en memoria (M7, D7).
# Nada más: parser, B-tree, encodings, varint y caché van a mano (D8).
[dependencies]
sha2 = "0.10"
getrandom = { version = "0.3", features = ["std"] }
aes-gcm = "0.10"
zeroize = "1"
# Solo para el harness de benchmarks (M9), tras la feature `bench-sqlite`. Es
# `optional` (las dev-dependencies no pueden serlo) y no se compila por defecto:
# el build y los tests normales siguen con las 4 dependencias de runtime de D8.
rusqlite = { version = "0.37", features = ["bundled"], optional = true }

[dev-dependencies]
tempfile = "3"

[features]
# Activa la comparación con SQLite en el bench: `cargo bench --features bench-sqlite`.
bench-sqlite = ["dep:rusqlite"]

# Harness CRUD hecho a mano (sin criterion, D8): mide con `std::time`.
[[bench]]
name = "crud"
harness = false
