# Workspace: el core embebido (raíz) se queda D8-mínimo; el módulo de conexión
# (M11) vive en crates aparte para no contaminar sus dependencias y dejar sitio
# al límite open-core (la lib sigue MIT/Apache; el servidor podrá llevar otra
# licencia). Ver docs/11-cliente-servidor.md.
[workspace]
members = ["arkeion-proto"]

[package]
name = "arkeion"
version = "0.12.0"
edition = "2024"
rust-version = "1.89"
description = "Embedded, versioned, auditable database engine — as if SQLite and Git had a child, born in Europe."
homepage = "https://arkeion.tech"
repository = "https://gitlab.com/syrakon/arkeion"
license = "MIT OR Apache-2.0"
keywords = ["database", "embedded", "versioning", "audit", "sqlite"]
categories = ["database-implementations", "database"]
# La versión menor sigue los hitos: 0.10 = M0–M10 (docs/06 y docs/09); 0.11 añade
# una expansión SQL grande (subconsultas, CTEs, UNION, vistas, FKs, triggers y la
# familia ALTER COLUMN lógica, ver docs/04). 1.0.0 = formato en disco congelado.
exclude = ["docs/sesiones/", "arkeion-proto/"]

# Supply chain mínima y justificada (docs/05-decisiones.md, D8):
#   sha2      — SHA-256 (FIPS 180-4): tags de integridad y hash chain. RustCrypto, Rust puro.
#   getrandom — entropía del SO para file_id y kdf_salt en la creación del archivo.
#   aes-gcm   — AES-256-GCM (FIPS 197 / SP 800-38D): cifrado en reposo por página (M7, D6).
#   zeroize   — borrado seguro de la clave cruda en memoria (M7, D7).
# Nada más: parser, B-tree, encodings, varint y caché van a mano (D8).
[dependencies]
sha2 = "0.10"
getrandom = { version = "0.3", features = ["std"] }
aes-gcm = "0.10"
zeroize = "1"
# Solo para el harness de benchmarks (M9), tras la feature `bench-sqlite`. Es
# `optional` (las dev-dependencies no pueden serlo) y no se compila por defecto:
# el build y los tests normales siguen con las 4 dependencias de runtime de D8.
rusqlite = { version = "0.37", features = ["bundled"], optional = true }

[dev-dependencies]
tempfile = "3"

[features]
# Activa la comparación con SQLite en el bench: `cargo bench --features bench-sqlite`.
bench-sqlite = ["dep:rusqlite"]

# Harness CRUD hecho a mano (sin criterion, D8): mide con `std::time`.
[[bench]]
name = "crud"
harness = false

# Benchmark vectorial (KNN exacto + IVF/ANN) sobre datasets reales tipo SIFT,
# con recall@k contra ground-truth. Lee rutas por variables de entorno; emite
# JSON. Comparación cruzada (pgvector/Qdrant) en `bench/` fuera del crate.
[[bench]]
name = "vec_bench"
harness = false

# Benchmark FTS sobre passages reales (MS MARCO): Arkeion MATCH+bm25 vs SQLite
# FTS5 (con `--features bench-sqlite`). Emite JSON.
[[bench]]
name = "fts_bench"
harness = false

# Throughput vectorial CONCURRENTE: construye el índice IVF una vez y barre nº de
# hilos a nprobe fijo, midiendo qps agregado. Aísla el lever de paralelismo (QPS =
# throughput) del de latencia por query. Lee rutas/params por entorno.
[[bench]]
name = "vec_concurrent"
harness = false
